Music hyperlink removed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="mainContainer">
         <div id="mainDiv">
             <h1>Margaret Danielle Parker</h1>
-            <p>I'm Margaret. A Privacy Advocate, and a <a href="https://obscurifymusic.com/profile?id=21jf2fu72s7f3olw4g7donnma&code=e460393f0e158aa5" target="_blank">Music</a> enthusiast. <br>
+            <p>I'm Margaret. A Privacy Advocate, and a Music enthusiast. <br>
             Aside from that, have a nice day.
             </p>
 
