--- a/index.html
+++ b/index.html
@@ -18,14 +18,7 @@
             </p>
 
             <h2>Contact</h2>
-            <p>I can be emailed at <a href="mailto:p-marg.88dnk@slmail.me">p-marg.88dnk@slmail.me</a> <br>
-			I am avalable at <a href="https://getsession.org/" target="_blank">Session</a>
-			</p>
-
-            <h2>Session ID</h2>
-            <p><code class="cryptoaddr">05f5531ea980a0efee81889ec3f7302a197f7b4633dd2b8861f4dc008faccbea32</code></p>
-            <p> <img src="Margaret_files/QRCode.jpg"width="110" height="110"> </p>
-            
+            <p>I can be emailed at <a href="mailto:p-marg.88dnk@slmail.me">p-marg.88dnk@slmail.me</a></p>
 			<h2>Articles</h2>
                 <a href="https://usermod.net/why-I-deleted-facebook-and-you-should-too/" target="_blank">Why I deleted my Facebook and why you should too</a> <br>
                 <a href="https://odysee.com/@techlore:3/the-complete-beginner%E2%80%99s-guide-to:a?r=GW7A6VZ9PEXumZtpkjhHszaNqBYcERbe" target="_blank">The Complete Beginner’s Guide to Online Privacy</a>
