--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <h2>Contact</h2>
             <p>I can be emailed at <a href="mailto:p-marg.88dnk@slmail.me">p-marg.88dnk@slmail.me</a> <br>
-			My <a href="https://odysee.com/@p.marg:c">odysee</a>channel</p>
+			My <a href="https://odysee.com/@p.marg:c">odysee</a> content.</p>
 			<h2>Articles</h2>
                 <a href="https://usermod.net/why-I-deleted-facebook-and-you-should-too/" target="_blank">Why I deleted my Facebook and why you should too</a> <br>
                 <a href="https://odysee.com/@techlore:3/the-complete-beginner%E2%80%99s-guide-to:a?r=GW7A6VZ9PEXumZtpkjhHszaNqBYcERbe" target="_blank">The Complete Beginner’s Guide to Online Privacy</a>
