--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<h2>Articles</h2>
                 <a href="https://usermod.net/why-I-deleted-facebook-and-you-should-too/" target="_blank">Why I deleted my Facebook and why you should too</a> <br>
                 <a href="https://odysee.com/@techlore:3/the-complete-beginner%E2%80%99s-guide-to:a?r=GW7A6VZ9PEXumZtpkjhHszaNqBYcERbe" target="_blank">The Complete Beginner’s Guide to Online Privacy</a> <br>
-                <a href="https://cyberpunked.org/" target="_blank">Cybersecurity Essentials</a>
+                <a href="https://cyberpunked.org/" target="_blank">Introduction to cybersecurity</a>
         </div>
     </div>
 
