--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<code class="cryptoaddr">bRhWx38Bi1FxiD25HT6nQzqJd1baPqmjMR</code>
 			<h2>Articles</h2>
                 <a href="https://usermod.net/why-I-deleted-facebook-and-you-should-too/" target="_blank">Why I deleted my Facebook and why you should too</a> <br>
-                <a href="https://odysee.com/@techlore:3/the-complete-beginner%E2%80%99s-guide-to:a?r=GW7A6VZ9PEXumZtpkjhHszaNqBYcERbe" target="_blank">The Complete Beginner’s Guide to Online Privacy</a> <br>
+                <a href="https://odysee.com/$/list/c892e9f0cc10b2f94e6b190a7d89185a70fe7a00" target="_blank">Beginner Guide’s to Online Privacy</a> <br>
                 <a href="https://cyberpunked.org/" target="_blank">Introduction to cybersecurity</a>
         </div>
     </div>
